sass/globals.sass
/* 
 * Copyright 2019-2023 (c) Nove Group
 * GitHub: https://github.com/nove-org/
 * Inter font is property of their respective owners.
 */

@use 'brand' as *

@import url('https://f.nove.team/fonts/inter/conf.css')

*
    user-select: none
    font-family: 'Inter'
    transition-duration: .15s
    scrollbar-width: thin
    margin: 0

.disabled
    pointer-events: none
    cursor: default
    opacity: .5

p.error
    display: block
    position: fixed
    bottom: 30px
    right: 30px
    color: $colored
    background: $secondary
    border: 1px solid $border
    border-radius: $radius
    padding: 10px
    width: fit-content
    z-index: 100

div.background
    position: fixed
    top: 0
    left: 0
    width: 100%
    height: 100vh
    background: #00000042
    animation: backgronud 300ms ease-in-out
    @keyframes backgronud
        0%
            background: #00000000
        100%
            background: #00000042

img
    pointer-events: none

a
    text-decoration: none
    color: $font

html
    height: 100%
    transition-duration: 0s

body
    margin: 0
    background: $primary
    color: $font
    width: 100%
    min-height: 100%
    transition-duration: 0s
    & main
        padding: 0 20px
        width: calc( 100% - 20px * 2 )
        max-width: 1300px
        margin: 0 auto
        min-height: calc( 100vh - 4rem )

span.badge
    padding: 2px 4px
    border-radius: 10px
    font-size: 14px
    color: $font
    font-weight: 600
    text-transform: uppercase
    background: $colored2

::-webkit-scrollbar
    width: 2px

nav.navBox
    background: #00000061
    backdrop-filter: blur(5px)
    position: sticky
    top: -0.01px
    max-height: 4rem
    height: 4rem
    display: flex
    flex-direction: column
    align-items: center
    justify-content: center
    border-bottom: 1px solid #00000000
    transition-duration: 0s
    z-index: 99
    &.is-pinned
        padding-top: 1px
        border-bottom: 1px solid $border
        & div.container
            & header
                & img
                    margin-top: -1px
    & div.container
        max-width: 1300px
        width: calc( 100% - 20px * 2 )
        padding: 0 20px
        margin: auto
        display: flex
        flex-direction: row
        align-items: center
        justify-content: space-between
        transition-duration: 0s
        & header
            display: flex
            flex-direction: row
            align-items: center
            & img
                transition-duration: 0s
                margin-right: 6px
        & ul
            display: flex
            flex-direction: row
            align-items: center
            list-style: none
            padding: 0
            margin: 0
            &.ul
                position: absolute
                left: 50%
                transform: translateX(-50%)
            & figure
                margin: 0
                padding: 0
                border-radius: 50%
                position: relative
                cursor: pointer
                & img
                    border-radius: 50%
                    margin-top: 1px
                    transition-duration: 0s
                & div.switcher
                    position: absolute
                    bottom: calc( -166px )
                    left: calc( -277px )
                    width: 300px
                    height: 156px
                    background: $secondary
                    border: 1px solid $border
                    border-radius: $radius
                    box-shadow: 0 0 50px 5px #0000007c
                    cursor: default
                    animation: switcher 200ms ease-in-out
                    @keyframes switcher
                        0%
                            opacity: 0
                        100%
                            opacity: 1
                    & header
                        display: flex
                        align-items: center
                        padding: 15px
                        border-bottom: 1px solid $border
                        cursor: default
                    & ul
                        padding: 0
                        margin: 0
                        list-style: none
                        flex-direction: column
                        align-items: flex-start
                        & li
                            opacity: 1 !important
                            display: block !important
                            width: 100%
                            margin-right: 0 !important
                            margin-left: 0 !important
                            cursor: pointer
                            & a
                                padding: 15px
                                margin: 0
                                width: calc( 100% - 15px * 2 )
                                display: flex !important
                                align-items: center
                                & svg
                                    margin-right: 5px
                                &:hover
                                    background: $border
                                    color: $font
            & li
                font-size: 14px
                letter-spacing: .2px
                &:not(:last-child)
                    margin-right: 35px
                & a
                    color: $font2
                    &:hover
                        color: $font
                &.login
                    margin-right: 20px
                    & a
                        color: $font3
                        &:hover
                            color: $font
                &.button
                    background: $font
                    border: 1px solid $font
                    border-radius: $radius
                    cursor: pointer
                    max-height: 33px
                    min-height: 33px
                    max-width: 80px
                    min-width: 80px
                    &:hover
                        background: $secondary
                        border: 1px solid $border
                        & a
                            color: $font
                    & a
                        width: 100%
                        height: 100%
                        color: $primary
                        font-weight: 500
                        max-height: 33px
                        min-height: 33px
                        max-width: 80px
                        min-width: 80px
                        display: flex
                        flex-direction: column
                        align-items: center
                        justify-content: center

footer.footerBox
    border-top: 1px solid $border
    background: $secondary
    display: flex
    flex-direction: column
    align-items: center
    justify-content: center
    max-height: fit-content
    transition-duration: 0s
    & div.container
        max-width: 1300px
        width: calc( 100% - 20px * 4 )
        padding: 50px 20px
        padding-right: 60px
        margin: auto
        display: flex
        flex-direction: row
        justify-content: space-between
        transition-duration: 0s
        & aside
            display: flex
            flex-direction: column
            justify-content: space-between
            & header
                & div.card
                    display: flex
                    align-items: center
                & p
                    color: $font2
                    font-weight: 300
                    font-size: 14px
                    margin-top: 3px
                & img
                    margin-right: 6px
        & section.content
            display: flex
            flex-direction: row
            justify-content: space-between
            & div.card
                &:not(:last-child)
                    margin-right: 150px
                & header
                    font-size: 18px
                    font-weight: 600
                    margin-botom: 5px
                & ul
                    padding: 0
                    margin: 0
                    list-style: none
                    & li
                        margin-top: 5px
                        & a
                            color: $font2
                            font-weight: 300
                            &:hover
                                color: $font

@media screen and (max-width: 1010px)
    nav.navBox
        & div.container
            & ul
                & li
                    font-size: 13px
                    &:not(:last-child)
                        margin-right: 20px
                    &.login,&.button
                        font-size: 14px
                        &:not(:last-child)
                            margin-right: 20px

@media screen and (max-width: 720px)
    nav.navBox
        & div.container
            & ul
                & li
                    font-size: 13px
                    &:not(:last-child)
                        margin-right: 10px
                    &.login,&.button
                        font-size: 14px
                        &:not(:last-child)
                            margin-right: 20px
    footer.footerBox
        & div.container
            width: calc( 100% - 20px )
            padding-right: 0px
            & section.content
                flex-direction: column
                & div.card:not(:first-child)
                    margin-top: 30px

@media screen and (max-width: 680px)
    nav.navBox
        & div.container
            & ul
                & li
                    opacity: 0
                    &.login,&.button
                        opacity: 1

@media screen and (max-width: 668px)
    nav.navBox
        & div.container
            & ul
                & li
                    display: none
                    &.login,&.button
                        display: block

@media screen and (max-width: 550px)
    footer.footerBox
        & div.container
            flex-direction: column
            & section.content
                & div.card
                    margin-top: 30px

@media screen and (max-width: 300px)
    nav.navBox
        & div.container
            & header
                & h1
                    font-size: 20px
            & ul
                & li.login
                    display: none

